feat: vim like terminal navigation

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,3 +6,11 @@ normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
 italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
 size = 18.0
+
+[keyboard]
+bindings = [
+  { key = "V", mods = "Alt", action = "ToggleViMode" }
+]
+
+[scrolling]
+history = 100000
