--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,11 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection
+
+set-option -g set-clipboard on
+
+set -g mouse on
+set -g history-limit 100000 
