--- a/.config/ohmyposh/zen.toml
+++ b/.config/ohmyposh/zen.toml
@@ -6,7 +6,7 @@ final_space = true
   red = "#F38BA8"
   lavender = "#B4BEFE"
   blue = "#89B4FA"
-  pink = "#F5C2E7"
+  flamingo = "#F2CDCD"
   peach = "#FAB387"
 
 [secondary_prompt]
@@ -17,7 +17,7 @@ final_space = true
 [transient_prompt]
   template = '❯ '
   background = 'transparent'
-  foreground_templates = ['{{if gt .Code 0}}p:red{{end}}', '{{if eq .Code 0}}p:blue{{end}}']
+  foreground_templates = ['{{if gt .Code 0}}p:red{{end}}', '{{if eq .Code 0}}p:flamingo{{end}}']
 
 [[blocks]]
   type = 'prompt'
@@ -26,7 +26,7 @@ final_space = true
 
   [[blocks.segments]]
     template = '{{ .Path }}'
-    foreground = 'p:blue'
+    foreground = 'p:flamingo'
     background = 'transparent'
     type = 'path'
     style = 'plain'
@@ -36,7 +36,7 @@ final_space = true
       style = 'full'
 
   [[blocks.segments]]
-    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} <p:pink>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
+    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} <p:blue>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
     foreground = 'p:grey'
     background = 'transparent'
     type = 'git'
@@ -73,7 +73,7 @@ final_space = true
     background = 'transparent'
     type = 'text'
     style = 'plain'
-    foreground_templates = ['{{if gt .Code 0}}p:red{{end}}', '{{if eq .Code 0}}p:blue{{end}}']
+    foreground_templates = ['{{if gt .Code 0}}p:red{{end}}', '{{if eq .Code 0}}p:flamingo{{end}}']
 
     [blocks.segments.properties]
       cache_duration = 'none'
