--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,20 +37,16 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 set -g status-style "bg=#1E1E2E fg=#CDD6F4"
 set -g status-left-style "bg=#1E1E2E fg=#A6ADC8"
 set -g status-right-style "bg=#1E1E2E fg=#A6ADC8"
-set -g status-left "#[bg=#F5E0DC,fg=#F5E0DC] #[bg=#F5E0DC,fg=#45475A,bold]#S #[bg=#1E1E2E,fg=#F5E0DC]"
+set -g status-left "#[bg=#F5E0DC,fg=#F5E0DC] #[bg=#F5E0DC,fg=#45475A,bold] #S #[bg=#1E1E2E,fg=#F5E0DC]"
 set -g status-right ""
 setw -g window-status-format "#[bg=#1E1E2E,fg=#A6ADC8] #I "
-setw -g window-status-current-format "#[fg=#F5E0DC,bg=#1E1E2E,bold] #[bg=#F5E0DC,fg=#45475A,bold] #I #[bg=#1E1E2E,fg=#F5E0DC]"
+setw -g window-status-current-format "#[fg=#F5E0DC,bg=#1E1E2E,bold] #[bg=#F5E0DC,fg=#45475A,bold] #{?window_zoomed_flag,*,}#I #[bg=#1E1E2E,fg=#F5E0DC]"
 setw -g window-status-separator " "
 setw -g pane-border-style "fg=#45475A"
 setw -g pane-active-border-style "fg=#F5E0DC"
