--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
