--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 
 set -g mouse on
-set -g history-limit 100000 
+set -g history-limit 1000000 
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
