--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 
-set -g mouse off
+set -g mouse on
 set -g history-limit 1000000 
 
 # Start windows and panes at 1, not 0
