--- a/.config/ohmyposh/zen.toml
+++ b/.config/ohmyposh/zen.toml
@@ -2,6 +2,13 @@ console_title_template = '{{ .Shell }} in {{ .Folder }}'
 version = 3
 final_space = true
 
+[palette]
+  red = "#F38BA8"
+  lavender = "#B4BEFE"
+  blue = "#89B4FA"
+  flamingo = "#F2CDCD"
+  peach = "#FAB387"
+
 [secondary_prompt]
   template = '❯❯ '
   foreground = 'p:blue'
