--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,10 +14,10 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 
-map ctrl+j kitten pass_keys.py bottom ctrl+j "^.* - nvim$"
-map ctrl+k kitten pass_keys.py top    ctrl+k "^.* - nvim$"
-map ctrl+h kitten pass_keys.py left   ctrl+h "^.* - nvim$"
-map ctrl+l kitten pass_keys.py right  ctrl+l "^.* - nvim$"
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
