--- a/.config/ohmyposh/zen.toml
+++ b/.config/ohmyposh/zen.toml
@@ -35,6 +35,13 @@ final_space = true
       style = 'full'
 
   [[blocks.segments]]
+    type = 'python'
+    style = 'plain'
+    template = ' [{{ .Venv }}]'
+    foreground = 'p:lavender'
+    background = 'transparent'
+
+  [[blocks.segments]]
     template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} <p:blue>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
     foreground = 'p:grey'
     background = 'transparent'
