--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -43,3 +43,14 @@ automatically-unhide-macos-hidden-apps = true
     alt-shift-7 = 'move-node-to-workspace 7'
     alt-shift-8 = 'move-node-to-workspace 8'
     alt-shift-9 = 'move-node-to-workspace 9'
+
+    [workspace-to-monitor-force-assignment]
+        1 = 'main'
+        2 = 'main'
+        3 = 'main'
+        4 = 'main'
+        5 = 'main'
+        6 = ['secondary', 'main']
+        7 = ['secondary', 'main']
+        8 = ['secondary', 'main']
+        9 = ['secondary', 'main']
